...
    static let backButtonSize: CGFloat = 44
    static let backButtonTopInset: CGFloat = 8
    static let backButtonLeadingInset: CGFloat = 8
    static let progressViewTopInset: CGFloat = 8
    
    enum Images {
        static let backButton = "nav_back_button"
    }
}

// MARK: - WebViewViewController
final class WebViewViewController: UIViewController {
    // MARK: - Public Properties
    var presenter: WebViewPresenterProtocol?
    weak var delegate: WebViewViewControllerDelegate?
    
    // MARK: - UI Components
    private lazy var webView: WKWebView = {
        let webView = WKWebView()
        webView.tintColor = .systemBlue
        webView.accessibilityIdentifier = "UnsplashWebView"
        return webView
    }()
    
...
