...
    
    enum Images {
        static let authLogo = "auth_screen_logo"
    }
    
    enum Texts {
        static let loginButton = "Войти"
    }
}

// MARK: - AuthViewController
final class AuthViewController: UIViewController {
    // MARK: - Public Properties
...
