...
        let label = UILabel()
        label.font = UIFont.systemFont(ofSize: ImagesListCellConstants.dateLabelFontSize)
        label.textColor = .ypWhite
        return label
    }()
    
    lazy var likeButton: UIButton = {
        let button = UIButton()
        button.addTarget(nil, action: #selector(didTapLikeButton), for: .touchUpInside)
        button.accessibilityIdentifier = "likeButton"
        return button
    }()
    
...
